Update Brazil meetup
The old meetup group is inactive since 2019.

--- a/content/community/user_groups.adoc
+++ b/content/community/user_groups.adoc
@@ -21,7 +21,7 @@ https://github.com/clojure/clojure-site[clojure-site] github repo.
 [[argentina]]
 * Argentina https://www.meetup.com/ClojureBA/[Clojure User Group Buenos Aires] (Twitter: https://twitter.com/ClojureBA[@ClojureBA])
 [[brazil]]
-* Brazil https://www.meetup.com/clj-sp/[Grupo de Usuários Clojure de São Paulo e Rio de Janeiro]
+* Brazil https://www.meetup.com/clojure-br/[Clojure BR Meetup]
 [[canada]]
 * Canada
 ** https://groups.google.com/forum/#!forum/montreal-clojure-user-group[Montreal Clojure User
