--- a/content/releases/tools.adoc
+++ b/content/releases/tools.adoc
@@ -22,6 +22,12 @@ For more information see the following docs:
 
 Recent official releases are described here. Prereleases and older versions can be found in the https://github.com/clojure/brew-install/blob/1.11.1/CHANGELOG.md[repo changelog].
 
+=== 1.12.0.1488 (Nov 21, 2024) [[v1.12.0.1488]]
+
+* https://clojure.atlassian.net/browse/TDEPS-265[TDEPS-265] - `-Ttools install-latest` when :coord with git url provided
+* https://clojure.atlassian.net/browse/TDEPS-268[TDEPS-268] - `-X:deps find-versions` returns all procurer types
+* Updated tools.deps, tools.deps.cli, tools.tools to latest
+
 === 1.12.0.1479 (Sep 5, 2024) [[v1.12.0.1479]]
 
 * Use Clojure 1.12.0 as default Clojure version
