Update Madison Clojure website

--- a/content/community/user_groups.adoc
+++ b/content/community/user_groups.adoc
@@ -43,7 +43,7 @@ Group] (Inactive since 2022)
 *** https://www.meetup.com/Chicago-Clojure/[Chicago]
 *** https://cincyfp.wordpress.com/[Cincy Functional Programmers Group] (Inactive since 2018)
 *** Detroit Clojure Group
-*** https://www.meetup.com/Madison-Clojure-Meetup/[Madison Clojure Meetup] - Madison, WI
+*** https://madclj.com/[Madison Clojure] - Madison, WI
 ** South
 *** https://www.meetup.com/Cap-Clug/[National Capital Area Clojure Users (Inactive since 2021)
 Group] - Reston, VA
