Add DIAS in companies list

--- a/content/community/companies.adoc
+++ b/content/community/companies.adoc
@@ -143,6 +143,7 @@ Also, check out the <<success_stories#,Clojure Success Stories>> and <<community
 * Devatics
 * Dewise
 * Diagnosia
+* Digitaalinen asuntokauppa DIAS
 * Discendum ltd
 * Dividend Finance
 * Doctor Evidence
