--- a/README.adoc
+++ b/README.adoc
@@ -16,9 +16,9 @@ If you wish to make a contribution (typo, modification, or new content), you mus
 
 The site is built using http://jbake.org/[JBake].
 
-To https://jbake.org/docs/2.6.5/#installation[install] JBake 2.6.5:
+To https://jbake.org/docs/2.6.5/#installation[install] JBake 2.6.5 (this version contains native code that only works on x86_64 platforms):
 
-. `curl -L -O https://dl.bintray.com/jbake/binary/jbake-2.6.5-bin.zip` (or download this file with your browser)
+. `curl -L -O https://github.com/jbake-org/jbake/releases/download/v2.6.5/jbake-2.6.5-bin.zip` (or download this file with your browser)
 . `unzip -o jbake-2.6.5-bin.zip`
 . Add jbake-2.6.5-bin/bin to your system PATH
 
