--- a/content/community/books.adoc
+++ b/content/community/books.adoc
@@ -12,6 +12,16 @@ _Listed in order of descending release date of newest edition._
 [width="80", cols="<.^30a,.^70", role="table"]
 |===
 
+| image::https://aiprobook.com/img/lafp-cover.png[Numerical Linear Algebra for Programmers: An Interactive Tutorial with GPU, CUDA, OpenCL, MKL, Java and Clojure,link="https://aiprobook.com/numerical-linear-algebra-for-programmers/",width="130"]
+| https://aiprobook.com/numerical-linear-algebra-for-programmers/[Numerical Linear Algebra for Programmers: An Interactive Tutorial with GPU, CUDA, OpenCL, MKL, Java and Clojure] +
+by Dragan Djuric +
+Dec 20, 2024
+
+| image::https://aiprobook.com/img/dlfp-cover.png[Deep Learning for Programmers,link="https://aiprobook.com/deep-learning-for-programmers/",width="130"]
+| https://aiprobook.com/deep-learning-for-programmers/[Deep Learning for Programmers] +
+by Dragan Djuric +
+Dec 20, 2024
+
 | image::https://pragprog.com/titles/mmclobrain/clojure-brain-teasers/mmclobrain-beta-500.jpg[Clojure Brain Teasers,link="https://pragprog.com/titles/mmclobrain/clojure-brain-teasers/",width="130"]
 | https://pragprog.com/titles/mmclobrain/clojure-brain-teasers/[Clojure Brain Teasers] +
 by Alex Miller, Lorilyn Jordan Miller +
@@ -31,16 +41,6 @@ Mar 23, 2023
 | https://www.amazon.com/dp/168050682X[Web Development with Clojure, 3rd edition] +
 by Dmitri Sotnikov, Scot Brown +
 July 29, 2021
-
-| image::https://aiprobook.com/img/lafp-cover.png[Numerical Linear Algebra for Programmers: An Interactive Tutorial with GPU, CUDA, OpenCL, MKL, Java and Clojure,link="https://aiprobook.com/numerical-linear-algebra-for-programmers/",width="130"]
-| https://aiprobook.com/numerical-linear-algebra-for-programmers/[Numerical Linear Algebra for Programmers] +
-by Dragan Djuric +
-Jan 15, 2021
-
-| image::https://aiprobook.com/img/dlfp-cover.png[Deep Learning for Programmers,link="https://aiprobook.com/deep-learning-for-programmers/",width="130"]
-| https://aiprobook.com/deep-learning-for-programmers/[Deep Learning for Programmers] +
-by Dragan Djuric +
-Dec 21, 2020
 
 | image::https://images-na.ssl-images-amazon.com/images/I/51AWkNYd4NL._SL160.jpg[The Clojure Workshop,link="https://www.amazon.com/dp/B082FJ9ZLY",width="130"]
 | https://www.amazon.com/dp/B082FJ9ZLY[The Clojure Workshop] +
