--- a/content/releases/tools.adoc
+++ b/content/releases/tools.adoc
@@ -22,6 +22,12 @@ For more information see the following docs:
 
 Recent official releases are described here. Prereleases and older versions can be found in the https://github.com/clojure/brew-install/blob/1.11.1/CHANGELOG.md[repo changelog].
 
+=== 1.12.0.1530 (Mar 5, 2025) [[v1.12.0.1530]]
+
+* clj -Sdeps can now take a path to an edn file instead of a literal map
+* Fix computation of tool argmap when both aliases and tools are used together
+* Update tools.deps to latest
+
 === 1.12.0.1517 (Feb 10, 2025) [[v1.12.0.1517]]
 
 * During dep expansion, only consider lib to be omitted if all parent paths to root are omitted
