--- a/content/guides/faq.adoc
+++ b/content/guides/faq.adoc
@@ -297,7 +297,7 @@ Primitive types can be found as the static TYPE field on the boxed class, for ex
 [[return_type_hint]]
 **<<faq#return_type_hint,How do you type hint a function return type?>>**
 
-Return <<xref/../../../reference/java_interop#typehints,type hints>> can sometimes be useful to flow Java type information out of functions. To provide a return type hint, placed it on the function parameter vector:
+Return <<xref/../../../reference/java_interop#typehints,type hints>> can sometimes be useful to flow Java type information out of functions. To provide a return type hint, place it on the function parameter vector:
 
 [source,clojure]
 ----
