--- a/content/api/api.adoc
+++ b/content/api/api.adoc
@@ -26,7 +26,7 @@ Documentation for Clojure <<xref/../../dev/contrib_libs#,contrib libraries>>:
 == Other resources
 
 * https://clojuredocs.org[ClojureDocs] - community provided example repository
-* https://cljdoc.org/[cljdoc] - library documentation
+* https://cljdoc.org[cljdoc] - library documentation
 
 == Deprecated (pre Clojure 1.3)
 
