--- a/content/guides/getting_started.adoc
+++ b/content/guides/getting_started.adoc
@@ -60,5 +60,5 @@ Also check out:
 There are many places to interact with other Clojure developers:
 
 * https://ask.clojure.org[Ask Clojure] [official] - Clojure Q&A and knowledge base
-* https://clojurians.net[Clojurians Slack channel] - Clojure live chat, check out #beginners, #jobs, etc
+* http://clojurians.net[Clojurians Slack channel] - Clojure live chat, check out #beginners, #jobs, etc
 * https://clojureverse.org[Clojureverse] - Clojure forum
