--- a/content/releases/devchangelog.adoc
+++ b/content/releases/devchangelog.adoc
@@ -680,7 +680,7 @@ clj -A:clj/next
 - https://clojure.atlassian.net/browse/CLJ-2128[CLJ-2128] spec error during macroexpand no longer throws compiler exception with location
 - Updated to use spec.alpha 0.1.123
 
-=== https://groups.google.com/forum/#!topic/clojure/nB4qnDNGS2A[1.9.0-alpha16] (Apr 27, 2017)
+=== https://groups.google.com/g/clojure/c/nB4qnDNGS2A[1.9.0-alpha16] (Apr 27, 2017)
 
 1.9.0-alpha16 includes the following changes since 1.9.0-alpha15:
 
